[project]
name = "fk8-cobb-logtool"
version = "0.6.0"
description = "FK8 Cobb AP log analyzer with a small FastAPI web app."
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0",
  "openpyxl>=3.1",
  "numpy>=1.24",
  "matplotlib>=3.8",
  "fastapi>=0.110",
  "uvicorn>=0.23",
  "jinja2>=3.1",
  "python-multipart>=0.0.9",
]

[project.scripts]
logtool = "logtool.cli:main"
logtool-web = "webapp.app:main"
